database_db1.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: db1
  name: database-db1
  namespace: snake
spec:
  containers:
  - image: docker.io/olivermichelsaldisued/nginx-net-policy:db1
    name: database-db1
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
