database_db2.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: db2
  name: database-db2
  namespace: snake
spec:
  containers:
  - image: docker.io/olivermichelsaldisued/nginx-net-policy:db2
    name: database-db2
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
