debian_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  name: debian
  namespace: snake
spec:
  containers:
  - command:
    - sleep
    - 1d
    image: olivermichelsaldisued/debian:curl
    name: debian
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
