nginx1111.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: db1111
    nginx: "1111"
  name: nginx1111
spec:
  containers:
  - image: olivermichelsaldisued/nginx-net-policy:1111
    name: nginx1111
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
