nginx81.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: db81
  name: nginx81
spec:
  containers:
  - image: olivermichelsaldisued/nginx-net-policy:81
    name: nginx8080
