vault.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: vault
  name: vault
  namespace: snake
spec:
  containers:
  - image: docker.io/olivermichelsaldisued/nginx-net-policy:vault
    name: vault
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
