db1_1111_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db1111
  name: db1-1111
  namespace: snake
spec:
  ports:
  - port: 1111
    protocol: TCP
    targetPort: 1111
  selector:
    app: db1111
    nginx: "1111"
