db1_81_services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db81
  name: db81
  namespace: snake
spec:
  ports:
  - port: 1111
    protocol: TCP
    targetPort: 81
  selector:
    app: db81
