db1_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db1
  name: db1
  namespace: snake
spec:
  ports:
  - port: 1111
    protocol: TCP
    targetPort: 80
  selector:
    app: db1
status:
  loadBalancer: {}
