db2_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db2
  name: db2
  namespace: snake
spec:
  ports:
  - port: 2222
    protocol: TCP
    targetPort: 80
  selector:
    app: db2
status:
  loadBalancer: {}
