vault_service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: vault
  name: vault
  namespace: snake
spec:
  ports:
  - port: 3333
    protocol: TCP
    targetPort: 80
  selector:
    app: vault
status:
  loadBalancer: {}
