24_np.yaml
# 24_np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-backend
  namespace: snake
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
    - Egress                    
  egress:
    -                            
      to:                           
      - podSelector:
          matchLabels:
            app: db1
      ports:                        
      - protocol: TCP
        port: 80
#      - protocol: TCP  # removing this port 
#        port: 8080     # will wrongly disable access
    -                            
      to:                           
      - podSelector:
          matchLabels:
            app: db2
      ports:                        
      - protocol: TCP
        port: 80
    - 
      ports:
      - protocol: UDP
        port: 53
      - protocol: TCP
        port: 53
