deny_all_netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-backend-deny
  namespace: snake
spec:
  policyTypes:
    - Egress
  egress: []
