netpolicy2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-backend
  namespace: snake
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector: {} 
      ports:
        - protocol: TCP
          port: 1111
    - to:
      ports:
        - protocol: TCP
          port: 2222
    - to:
      ports:
      - protocol: UDP
        port: 53
